# X-Ark_MIDI_ENGINE

./: .gitignore  AGENTS.md  ArkMidiEngine.cs  ArkMidiEngine.sln  CMakeLists.txt  LICENSE  README.md  TASKS.md  X-ArkMidiEngine.cs  X-ArkMidiEngine.sln  XArkMidiEngine.cs
.github/workflows/: build.yml
ArkMidiEngine/: ArkMidiEngine.vcxproj  ArkMidiEngine.vcxproj.filters
ArkMidiEngine/include/: ArkMidiEngine.h
ArkMidiEngine/src/: api.cpp
ArkMidiEngine/src/common/: BinaryReader.cpp  BinaryReader.h  CpuFeatures.cpp  CpuFeatures.h  FileUtil.cpp  FileUtil.h  Types.h
ArkMidiEngine/src/dls/: DlsFile.cpp  DlsFile.h
ArkMidiEngine/src/midi/: MidiEvent.h  MidiFile.cpp  MidiFile.h  MidiSequencer.cpp  MidiSequencer.h  MidiTrack.cpp  MidiTrack.h
ArkMidiEngine/src/sf2/: Sf2File.cpp  Sf2File.h  Sf2Types.h
ArkMidiEngine/src/soundbank/: SoundBank.h
ArkMidiEngine/src/synth/: Channel.h  Interpolator.h  SimdKernels.cpp  SimdKernels.h  SimdKernelsAvx2.cpp  Synthesizer.cpp  Synthesizer.h  Voice.cpp  Voice.h  VoicePool.cpp  VoicePool.h
X-ArkMidiEngine/: X-ArkMidiEngine.vcxproj  X-ArkMidiEngine.vcxproj.filters
X-ArkMidiEngine/include/: X-ArkMidiEngine.h  XArkMidiEngine.h
X-ArkMidiEngine/output/Release/: XArkMidiEngine.exp
X-ArkMidiEngine/src/: api.cpp  dllmain.cpp
X-ArkMidiEngine/src/common/: BinaryReader.h  CpuFeatures.cpp  CpuFeatures.h  FileUtil.cpp  FileUtil.h  Types.h
X-ArkMidiEngine/src/dls/: DlsFile.cpp  DlsFile.h
X-ArkMidiEngine/src/midi/: MidiEvent.h  MidiFile.cpp  MidiFile.h  MidiSequencer.cpp  MidiTrack.cpp  MidiTrack.h
X-ArkMidiEngine/src/midi2/: UmpDownConverter.cpp  UmpTypes.h
X-ArkMidiEngine/src/sf2/: Sf2File.cpp  Sf2File.h  Sf2Types.h
X-ArkMidiEngine/src/soundbank/: SoundBank.h
X-ArkMidiEngine/src/synth/: Channel.h  Interpolator.h  SimdKernels.cpp  SimdKernelsAvx2.cpp  Synthesizer.cpp  Synthesizer.h  Voice.cpp  Voice.h  VoicePool.cpp  VoicePool.h
include/: XArkMidiEngine.h
msvc/: MidiDump.vcxproj  Sf2Compliance.vcxproj  Sf2Dump.vcxproj  XArkMidiEngine.sln  XArkMidiEngine.vcxproj  XArkMidiEngine.vcxproj.filters  XArkMidiRealtimePlayer.vcxproj
src/: api.cpp  dllmain.cpp
src/common/: BinaryReader.cpp  BinaryReader.h  CpuFeatures.cpp  CpuFeatures.h  FileUtil.cpp  FileUtil.h  Types.h
src/dls/: DlsFile.cpp  DlsFile.h
src/midi/: MidiEvent.h  MidiFile.cpp  MidiFile.h  MidiSequencer.cpp  MidiSequencer.h  MidiTrack.cpp  MidiTrack.h
src/midi2/: Midi2File.cpp  Midi2File.h  UmpDownConverter.cpp  UmpDownConverter.h  UmpTypes.h
src/sf2/: Sf2File.cpp  Sf2File.h  Sf2Types.h
src/soundbank/: SoundBank.h
src/synth/: Channel.h  Interpolator.h  SimdKernels.cpp  SimdKernels.h  SimdKernelsAvx2.cpp  Synthesizer.cpp  Synthesizer.h  Voice.cpp  Voice.h  VoicePool.cpp  VoicePool.h
test/: Sf2Dump.vcxproj  dump_dls_zone.cpp  dump_midi_channel.cpp  dump_midi_track.cpp  dump_sf2_zone.cpp  inspect.cpp  inspect_ch15.txt  inspect_dls.cpp  inspect_output.txt  inspect_sf2_mods.cpp  main.cpp
tests/: analyze_wav_clipping.cpp  compare_wav_diff.cpp  dump_dls_zone.cpp  dump_midi_timeline.cpp  dump_midi_track.cpp  dump_midi_window.cpp  dump_sf2_zone.cpp  main.cpp  realtime_player.cpp  sf2_compliance.cpp
tools/XArkMidiGuiPlayer/: MainForm.cs  Program.cs  XArkMidiGuiPlayer.csproj  XArkMidiGuiPlayer.sln
